# MRPC-ESP8266

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.properties
Examples/Light_Service/: Light_Service.ino
Examples/Sonoff/: Sonoff.ino
Examples/TV_Remote/: TV_Remote.ino  pronto_code_converter.py
Examples/mrpc_rf/: mrpc_rf.ino
src/: CMakeLists.txt  amap.h  exception.h  jrpc.h  message.cpp  message.h  mrpc.cpp  mrpc.h  mrpc_webserver.cpp  mrpc_webserver.h  mrpc_wifi.cpp  mrpc_wifi.h  node.cpp  path.cpp  path.h  proxy.cpp  result.cpp  result.h  routing.cpp  routing.h  service.cpp  service.h  socket_transport.cpp  transport.cpp  transport.h  uuid.cpp  uuid.h  webserver.cpp
test/: CMakeLists.txt  test_rpc.cpp
